Correction faute orotho

--- a/pages/Activites.html
+++ b/pages/Activites.html
@@ -44,7 +44,7 @@
 
         <article>
             <h2>Surf</h2>
-            <p>Nous vous offrons l'opportunité de découvrir le surf ou de vous améliorer dans cette discipline captivante grâce à nos stages de découverte et d'expérimentation, adaptés aux surfeurs les plus aguerris.</p>
+            <p>Nous vous offrons l'opportunité de découvrir le surf ou de vous améliorer dans cette discipline captivante grâce à nos stages de découverte et d'expérimentation adaptés aux surfeurs les plus aguerris.</p>
             <img src="../images/img3.jpg" alt="">
         </article>
     </section>
