Correction faute orotho et ajout de la page informations

--- a/pages/Tarifs.html
+++ b/pages/Tarifs.html
@@ -25,7 +25,7 @@
                     <a href="Tarifs.html">Tarifs</a>
                 </li>
                 <li>
-                    <a href="#">Informations</a>
+                    <a href="info.html">Informations</a>
                 </li>
             </ul>
         </nav>
@@ -76,7 +76,7 @@
     </main>
     
     <footer>
-        <p>Copyright &copy; 2023. Tous droits réservés AquaVenture</p>
+        <p>Copyright &copy; 2023</p>
     </footer>
 </body>
 </html>
