--- a/pages/info.html
+++ b/pages/info.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    Debaynoah.nd66@gmail.com
-    Debay
-    Noah
-    Gr4
-    
+    <p>Debaynoah.nd66@gmail.com</p>
+    <p>Debay</p>
+    <p>Noah</p>
+    <p>Gr4</p>
+    <p>Les wireframes ont été réalisé avec le site <a href="https://wireframepro.mockflow.com/editor.jsp?editor=on&publicid=M34a0f9f3d9570ad53908345581ca0bfc1685105181915&perm=Create&projectid=M4L23Lnclpb&spaceid=&ptitle=Wireframe&bgcolor=white&category=semanticui2&pcompany=C916f78d1e7bb41289ba547061d346967#/page/482bb0282e014152a75f9acb123ac817">WireframesPro.mockflow.com</a> </p>
+    <a href="https://wireframepro.mockflow.com/view/M4L23Lnclpb"><img src="../images/Wireframes.png" alt="Wireframes du site"></a>
 </body>
 </html>
