--- a/pages/Activites.html
+++ b/pages/Activites.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <meta name="description" content="Ici, vous trouverez tout votre bonheur dans des activités nautiques sur la cote bretonne. On vous attend avec impatience.">
+
     <title>Document</title>
 </head>
 <body>
